--- a/archiso/efiboot/loader/entries/03-nvidianouveau.conf
+++ b/archiso/efiboot/loader/entries/03-nvidianouveau.conf
@@ -1,7 +1,7 @@
 #
 # SPDX-License-Identifier: GPL-3.0-or-later
 
-title   S.T.A.L.K.E.R. install medium (x86_64, UEFI, NVIDIA)
+title   Enter The Zone install medium (x86_64, UEFI, NVIDIA)
 linux   /%INSTALL_DIR%/boot/x86_64/vmlinuz-linux
 initrd  /%INSTALL_DIR%/boot/intel-ucode.img
 initrd  /%INSTALL_DIR%/boot/amd-ucode.img
