--- a/archiso/pacman.conf
+++ b/archiso/pacman.conf
@@ -74,17 +74,17 @@ LocalFileSigLevel = Optional
 #Include = /etc/pacman.d/mirrorlist
 #Usage = Sync Search
 
-[stalker-core-repo]
+[zone-core-repo]
 SigLevel = Optional TrustedOnly
-Server = https://stalker-os.github.io/$repo/$arch
+Server = https://zone-linux.github.io/$repo/$arch
 
-[stalker-repo]
+[zone-repo]
 SigLevel = Optional TrustedOnly
-Server = https://stalker-os.github.io/$repo/$arch
+Server = https://zone-linux.github.io/$repo/$arch
 
-[stalker-3party-repo]
+[zone-3party-repo]
 SigLevel = Optional TrustedOnly
-Server = https://stalker-os.github.io/$repo/$arch
+Server = https://zone-linux.github.io/$repo/$arch
 
 [core]
 Include = /etc/pacman.d/mirrorlist
