--- a/archiso/syslinux/archiso_pxe-linux.cfg
+++ b/archiso/syslinux/archiso_pxe-linux.cfg
@@ -1,9 +1,9 @@
 LABEL arch64_nbd
 TEXT HELP
-Boot the Stalker install medium using NBD.
-It allows you to install S.T.A.L.K.E.R. or perform system maintenance.
+Boot the zone install medium using NBD.
+It allows you to install zone or perform system maintenance.
 ENDTEXT
-MENU LABEL S.T.A.L.K.E.R. install medium (x86_64, NBD)
+MENU LABEL zone install medium (x86_64, NBD)
 LINUX /%INSTALL_DIR%/boot/x86_64/vmlinuz-linux
 INITRD /%INSTALL_DIR%/boot/intel-ucode.img,/%INSTALL_DIR%/boot/amd-ucode.img,/%INSTALL_DIR%/boot/x86_64/initramfs-linux.img
 APPEND archisobasedir=%INSTALL_DIR% archisolabel=%ARCHISO_LABEL% archiso_nbd_srv=${pxeserver} checksum verify
@@ -11,10 +11,10 @@ SYSAPPEND 3
 
 LABEL arch64_nfs
 TEXT HELP
-Boot the S.T.A.L.K.E.R. live medium using NFS.
-It allows you to install S.T.A.L.K.E.R. or perform system maintenance.
+Boot the zone live medium using NFS.
+It allows you to install zone or perform system maintenance.
 ENDTEXT
-MENU LABEL S.T.A.L.K.E.R. install medium (x86_64, NFS)
+MENU LABEL zone install medium (x86_64, NFS)
 LINUX /%INSTALL_DIR%/boot/x86_64/vmlinuz-linux
 INITRD /%INSTALL_DIR%/boot/intel-ucode.img,/%INSTALL_DIR%/boot/amd-ucode.img,/%INSTALL_DIR%/boot/x86_64/initramfs-linux.img
 APPEND archisobasedir=%INSTALL_DIR% archiso_nfs_srv=${pxeserver}:/run/archiso/bootmnt checksum verify
@@ -22,10 +22,10 @@ SYSAPPEND 3
 
 LABEL arch64_http
 TEXT HELP
-Boot the S.T.A.L.K.E.R. live medium using HTTP.
-It allows you to install S.T.A.L.K.E.R. or perform system maintenance.
+Boot the zone live medium using HTTP.
+It allows you to install zone or perform system maintenance.
 ENDTEXT
-MENU LABEL S.T.A.L.K.E.R. install medium (x86_64, HTTP)
+MENU LABEL zone install medium (x86_64, HTTP)
 LINUX /%INSTALL_DIR%/boot/x86_64/vmlinuz-linux
 INITRD /%INSTALL_DIR%/boot/intel-ucode.img,/%INSTALL_DIR%/boot/amd-ucode.img,/%INSTALL_DIR%/boot/x86_64/initramfs-linux.img
 APPEND archisobasedir=%INSTALL_DIR% archiso_http_srv=http://${pxeserver}/ checksum verify
