--- a/archiso/efiboot/loader/entries/01-archiso-x86_64-linux.conf
+++ b/archiso/efiboot/loader/entries/01-archiso-x86_64-linux.conf
@@ -1,7 +1,4 @@
-#
-# SPDX-License-Identifier: GPL-3.0-or-later
-
-title   Enter The Zone install medium (x86_64, UEFI)
+title   Enter The Zone (64bit, UEFI)
 linux   /%INSTALL_DIR%/boot/x86_64/vmlinuz-linux
 initrd  /%INSTALL_DIR%/boot/intel-ucode.img
 initrd  /%INSTALL_DIR%/boot/amd-ucode.img
