Add core repo, to prevent grub from updating

--- a/archiso/airootfs/etc/pacman.conf
+++ b/archiso/airootfs/etc/pacman.conf
@@ -74,6 +74,10 @@ LocalFileSigLevel = Optional
 #Include = /etc/pacman.d/mirrorlist
 #Usage = Sync Search
 
+[zone-core-repo]
+SigLevel = Optional TrustedOnly
+Server = https://zone-linux.github.io/$repo/$arch
+
 [zone-repo]
 SigLevel = Optional TrustedOnly
 Server = https://zone-linux.github.io/$repo/$arch
