Change icon theme & font

--- a/archiso/airootfs/etc/lightdm/lightdm-gtk-greeter.conf
+++ b/archiso/airootfs/etc/lightdm/lightdm-gtk-greeter.conf
@@ -1,7 +1,7 @@
 [greeter]
 theme-name = Qogir-dark
-icon-theme-name = Papirus-Dark
-font-name = Source Code Pro Medium 10
+icon-theme-name = Qogir-dark
+font-name = JetBrainsMono Nerd Font Medium 10
 background = /usr/share/backgrounds/zone/zone_bg3.jpg
 default-user-image = /usr/share/zone.png
 clock-format = %A, %m/%d/%y | %H:%M %p
