Update time format

--- a/archiso/airootfs/etc/lightdm/lightdm-gtk-greeter.conf
+++ b/archiso/airootfs/etc/lightdm/lightdm-gtk-greeter.conf
@@ -4,7 +4,7 @@ icon-theme-name = Qogir-dark
 font-name = JetBrainsMono Nerd Font Medium 10
 background = /usr/share/backgrounds/zone/zone_bg3.jpg
 default-user-image = /usr/share/zone.png
-clock-format = %A, %m/%d/%y | %H:%M %p
+clock-format = %A, %m/%d/%y | %I:%M %p
 user-background = false
 indicators = ~session;~separator;~language;~spacer;~~Удачной охоты, СТАЛКЕР;~spacer;~clock;~power
 
